--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore the creative world of PGedeon, showcasing a collection of unique web projects that combine artistry, innovation, and craftsmanship.">
-    <meta name="keywords" content="PGedeon, web projects, creative portfolio, handcrafted art, custom ceramics, murals, logos, illustrations, handmade pottery, unique designs, photography, projection mapping, macro photography, professional film studio, photo studio rental, Richmond VA, video production services">
-    <title>PGedeon's Portfolio</title>
+    <meta name="description" content="Explore the creative world of Peter Gedeon, showcasing a collection of unique web projects that combine artistry, innovation, and craftsmanship.">
+    <meta name="keywords" content="Peter Gedeon, web projects, creative portfolio, handcrafted art, custom ceramics, murals, logos, illustrations, handmade pottery, unique designs, photography, projection mapping, macro photography, professional film studio, photo studio rental, Richmond VA, video production services, image optimization, WebP conversion, SEO tools, keyword synergy analyzer, free SEO tools">
+    <title>Peter Gedeon's Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -69,6 +69,20 @@
             <p>Richmond, VA Professional Film and Photo Studio Rental Space</p>
             <p><strong>SEO Description:</strong> Bridge RVA is the premier professional film and photo studio in Richmond, Virginia. Offering state-of-the-art facilities with affordable rental rates, Bridge RVA supports photographers, videographers, and production companies with a wide range of equipment, studio space, and custom production services. Located near VCU, Bridge RVA is perfect for creating professional content, including YouTube productions, feature films, commercials, and more.</p>
             <p><strong>Keywords:</strong> film studio rental, photo studio rental, Richmond VA, professional studio space, video production services, photography equipment rental, Cyclorama, green screen, custom set design, grip truck rental, production studio, Richmond photography studio.</p>
+        </div>
+
+        <div class="project">
+            <h2><a href="https://webp-image-optimizer.glitch.me/" target="_blank">WebP Image Optimizer</a></h2>
+            <p>Optimize your images for the web with ease!</p>
+            <p><strong>SEO Description:</strong> The WebP Image Optimizer is a powerful web app designed to help you efficiently optimize images for better website performance. With features like batch uploads, WebP conversion, space savings analysis, and previews, this tool is perfect for web developers, digital marketers, and anyone looking to speed up their website.</p>
+            <p><strong>Keywords:</strong> image optimization, WebP conversion, batch image upload, website performance, digital marketing, image compression, web development, image optimization tool, WebP format, online image optimizer.</p>
+        </div>
+
+        <div class="project">
+            <h2><a href="https://google-keyword-synergy-checker.glitch.me/" target="_blank">Google Search Phrase Keyword Synergy Analyzer</a></h2>
+            <p>Analyze keyword synergy for better SEO.</p>
+            <p><strong>SEO Description:</strong> The Google Search Phrase Keyword Synergy Analyzer is a free tool designed to help you improve your SEO by identifying common keywords across top-ranking websites. Incorporate these keywords into your content to increase your chances of ranking for your target search phrases. This essential SEO tool is accessible to everyone, breaking down economic barriers in the SEO industry.</p>
+            <p><strong>Keywords:</strong> SEO tools, keyword synergy, Google search phrases, free SEO tools, keyword analysis, content optimization, SEO ranking, search engine optimization, top-ranking keywords, accessible SEO tools.</p>
         </div>
 
         <!-- Add more projects here as you provide the content -->
