--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to PGedeon's Portfolio</h1>
+        <h1>Welcome to Peter Gedeon's Portfolio</h1>
         <p>Discover a curated selection of my web projects, each crafted with a passion for creativity and attention to detail. Click on the links below to explore each project and learn more about the inspiration and craftsmanship behind them.</p>
         
         <div class="project">
